syntax="proto3";
option java_package = "com.demo.grpc";

service user{
  rpc LogIn(LogInRequest) returns (LogInResponse) ;
  
}

message LogInRequest{
  string username = 1;
  string password = 2;
}
message LogInResponse{
  string token = 1;
  string code = 2;
  string message = 3;
}
